# whirl

./: .gitignore  Cargo.toml  LICENCE  README.md  index.js  package.json
.github/workflows/: CI.yml
__test__/: index.spec.js
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: iso8601.rs  lib.rs
