[package]
edition = "2018"
name = "arnau_whirl"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
napi = { version = "1.1", features = ["napi6", "serde-json"] }
napi-derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.5"

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
